[tool.poetry]
name = "fairdm-dev-tools"
version = "2025.1"
description = "Tools to assist development of FairDM data portals"
authors = ["Sam <samuel.scott.jennings@gmail.com>"]
license = "MIT"
readme = "README.md"
include = ["LICENSE", "README.md"]
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
black = "^24.10.0"
coverage = "^7.6.10"
deptry = "^0.21.2"
django-coverage-plugin = "^3.1.0"
django-debug-toolbar = "^4.4.6"
django-debug-toolbar-template-profiler = "^2.1.0"
django-extensions = "^3.2.3"
django-stubs = "^5.1.1"
djlint = "^1.36.4"
invoke = "^2.2.0"
ipython = "^8.31.0"
mypy = "^1.14.1"
pip-licenses = "^5.0.0"
pre-commit = "^4.0.1"
pylint-celery = "^0.3"
pylint-django = "^2.6.1"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-django = "^4.9.0"
pytest-env = "^1.1.5"
pytest-sugar = "^1.0.0"
tox = "^4.23.2"
types-python-dateutil = "^2.9.0.20241206"
types-requests = "^2.32.0.20241016"
djangorestframework-stubs = "^3.15.2"
factory-boy = "^3.3.1"
django-model-info = "^2024.11.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
