[tool.poetry]
name = "fairdm-dev-tools"
version = "2025.1"
description = "Tools to assist development of FairDM data portals"
authors = ["Sam <samuel.scott.jennings@gmail.com>"]
license = "MIT"
readme = "README.md"
include = ["LICENSE", "README.md"]
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
black = "*"
coverage = "*"
deptry = "*"
django-coverage-plugin = "*"
django-debug-toolbar = "*"
django-debug-toolbar-template-profiler = "*"
django-extensions = "*"
django-stubs = "*"
djlint = "*"
invoke = "*"
ipython = "*"
mypy = "*"
pip-licenses = "*"
pre-commit = "*"
pylint-celery = "*"
pylint-django = "*"
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
pytest-env = "*"
pytest-sugar = "*"
tox = "*"
types-python-dateutil = "*"
types-requests = "*"
djangorestframework-stubs = "*"
factory-boy = "*"
django-model-info = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
